--- a/src/views/ejs/manPagr.ejs
+++ b/src/views/ejs/manPagr.ejs
@@ -8,50 +8,70 @@
 	<link rel="stylesheet" type="text/css" href="../styles/navbar.css">
 	<link rel="stylesheet" type="text/css" href="../styles/footer.css">
     <link rel="stylesheet" type="text/css" href="../styles/womenPage.css">
-    <title> Women's Clothes | Theory</title>
+    <link rel="stylesheet" href="../styles/manPage.css">
+    <title> Men's Clothes | Theory</title>
     <link rel="shortcut icon" href="https://www.theory.com/on/demandware.static/Sites-theory2_US-Site/-/default/dw580c9d16/images/favicons/favicon2.ico">
 
-    
-    
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
 </head>
 <body>
-    <div id="navbar"></div>
-    <div class="firstBox page--header">Women</div>
+    <%- include("navbar.ejs") -%>
+    <div class="firstBox page--header">Men</div>
     <div class="firstSectionSlider">
         <div class="firstBox">
-        <div id="slider">
-
-        </div>
+            <div class="slider slider-product">
+                <div class="slider-div">
+                    <img src="https://ak-media.theory.com/i/theory/1012-mens-hero-02?$defaultMedia$" alt="">
+                    <div>
+                        <h2>PRECISION PONTE</h2>
+                        <p id="fsize">Our most comfortable fabric innovation to<br> date. Precision Ponte is your solution to <br>looking sharp and feeling good every day of <br>the week.</p>
+                        <a href="#">SHOP NOW</a>
+                    </div>
+                </div>
+                <div class="slider-div">
+                    <img width="100%" height="40%" src="https://ak-media.theory.com/i/theory/1012-mens-hero-04?$defaultMedia$" alt="">
+                    <div>
+                        <h2>ESSENTIAL TRIOS</h2>
+                        <p id="fsize">Our most iconic pieces, available for a better <br>value when purchased Three at a time in <br>any size or color.</p>
+                        <a href="">SHOP NOW</a>
+                    </div>
+                  
+                </div>
+              </div>
         </div>
     </div>
 <div class="firstSection">
-    <div class="firstBox">Shop Women</div>
+    <div class="firstBox">Categories</div>
     <a href="slider.html">
     <div class="firstBox1 ">
         
             <div> 
-               <img src="https://ak-media.theory.com/i/theory/1123-women-01-view-all?$defaultMedia$" alt="">
+               <img src="https://ak-media.theory.com/i/theory/1123-men-01-view-all?$defaultMedia$" alt="">
                 <div>VIEW ALL</div>
            
             </div>
             <div>
-                <img src="https://ak-media.theory.com/i/theory/1123-women-02-new-arrivals?$defaultMedia$" alt="">
+                <img src="https://ak-media.theory.com/i/theory/1123-men-02-new-arrivals?$defaultMedia$" alt="">
                 <div>ARRIVALS</div>
             </div>
             <div>
-                <img src="https://ak-media.theory.com/i/theory/1123-women-03-pants?$defaultMedia$" alt="">
+                <img src="https://ak-media.theory.com/i/theory/1123-men-03-pants?$defaultMedia$" alt="">
                 <div>PANTS</div>
             </div>
             <div>
-                <img src="https://ak-media.theory.com/i/theory/1123-women-04-jackets?$defaultMedia$" alt="">
+                <img src="https://ak-media.theory.com/i/theory/1123-men-04-jackets?$defaultMedia$" alt="">
                 <div>JACKET</div>
             </div>
             <div>
-                <img src="https://ak-media.theory.com/i/theory/1123-women-05-sweaters?$defaultMedia$" alt="">
+                <img src="https://ak-media.theory.com/i/theory/1123-men-05-sweaters?$defaultMedia$" alt="">
                 <div>SWEATERS</div>
             </div>
             <div>
-                <img src="https://ak-media.theory.com/i/theory/1123-women-06-outerwear?$defaultMedia$" alt="">
+                <img src="https://ak-media.theory.com/i/theory/1123-men-06-outerwear?$defaultMedia$" alt="">
                 <div>OUTERWEAR</div>
         
         </div>
@@ -65,7 +85,7 @@
     <a href="slider.html">
         <div class="secondBox1">
 <div>
-    <img src="https://ak-media.theory.com/i/theory/TH_K0701412_FKN_L0/CLAIRENE?$TH-Bestseller52x$" alt="">
+    <img src="https://ak-media.theory.com/i/theory/TH_L0888704_XHX_L0/HILLES-CREW?$TH-Bestseller52x$" alt="">
     <div class="secondBox2">
         <div class="bulletBox1">
         <div class="bullets1">
@@ -85,7 +105,7 @@
     </div>
 </div>
 <div>
-    <img src="https://ak-media.theory.com/i/theory/TH_L0718709_001_L0/?$TH-Bestseller52x$" alt="">
+    <img src="https://ak-media.theory.com/i/theory/TH_L0971421_001_L0/?$TH-product-tile2x$" alt="">
     <div class="secondBox2">
         <div class="bulletBox1">
         <div class="bullets1">
@@ -104,7 +124,7 @@
 
 
     <div>
-        <img src="https://ak-media.theory.com/i/theory/TH_H0101113_001_L0/ETIENNETTE-B?$TH-Bestseller52x$" alt="">
+        <img src="https://ak-media.theory.com/i/theory/TH_L0197236_XHX_L0/?$TH-Bestseller52x$" alt="">
         <div class="secondBox2">
             <div class="bulletBox1">
             <div class="bullets1">
@@ -122,7 +142,7 @@
         
     </div>
     <div>
-    <img src="https://ak-media.theory.com/i/theory/TH_H0101234_001_L0/TREECA-2?$TH-Bestseller52x$" alt="">
+    <img src="https://ak-media.theory.com/i/theory/TH_J0777217_Q5E_L0/?$TH-product-tile2x$" alt="">
     <div class="secondBox2">
         <div class="bulletBox1">
         <div class="bullets1">
@@ -148,7 +168,7 @@
         <div class="firstBox">Now Trending</div>
         <a href="slider.html">
         <div class="thirdBox1">
-                <div><img src="https://ak-media.theory.com/i/theory/TH_L1101404_0F4_L0/COLLAR-COAT?$TH-product-tile3x$
+                <div><img src="	https://ak-media.theory.com/i/theory/TH_A0674535_B7H_L0/SYLVAIN?$TH-Bestseller53x$
                     " alt="">
                      <div class="thirdBox2">
           <div class="bulletBox2">
@@ -162,7 +182,7 @@
         <div class="price2">&#8377 20,500.00</div>
                      </div>
                 </div>
-                <div><img src="https://ak-media.theory.com/i/theory/TH_I0001201_XLV_L0/?$TH-Bestseller52x$" alt="">
+                <div><img src="https://ak-media.theory.com/i/theory/TH_L0197236_XHX_L0/ZAINE-SW?$TH-Bestseller53x$" alt="">
                     <div class="thirdBox2">
                         <div class="bulletBox2">
                             <div class="bullets2">
@@ -184,7 +204,7 @@
 <div class="firstSection">
     <div class="firstBox"></div>
     <div class="forthBox1">
-            <div><img src="https://ak-media.theory.com/i/theory/TH_L0818756_YL8_L0/SHAPED-CARDI-A?$TH-product-tile2x$ 
+            <div><img src="https://ak-media.theory.com/i/theory/TH_L0197218_001_L0?$TH-pdp-large-desktop$
                 " alt="">
                  <div class="fortdBox2">
       <div class="bulletBox3">
@@ -198,23 +218,22 @@
     <div class="price2">&#8377 20,500.00</div>
                  </div>
             </div>
-            <div><img src="https://ak-media.theory.com/i/theory/TH_K0109203_001_L0/?$TH-product-tile2x$" alt="">
+            <div><img src="https://ak-media.theory.com/i/theory/TH_L0197101_XHX_L0?$TH-pdp-large-desktop$" alt="">
                 <div class="fortdBox2">
                     <div class="bulletBox3">
                         <div class="bullets3">
                             <div></div>
-                           
                             <div></div>
                             <div></div>
-                            <div></div>
+                            
                         </div>
                     </div>
                     <div class="productDetails2">Treeca Pull-On Pant in Crepe</div>
-                           <div class="price2">&#8377 20,900.00</div>   
+                           <div class="price2">&#8377 20,900.00</div>
                 </div>
             </div>
 
-            <div><img src="	https://ak-media.theory.com/i/theory/TH_K0701412_C05_L0/CLAIRENE?$TH-Bestseller52x$" alt="">
+            <div><img src="https://ak-media.theory.com/i/theory/TH_J0781713_0CT_L0?$TH-pdp-large-desktop$" alt="">
                 <div class="fortdBox2">
                     <div class="bulletBox3">
                         <div class="bullets3">
@@ -233,7 +252,8 @@
 <div class="firstSection">
     <div class="firstBox">New Arrivals</div>
     <div class="thirdBox1">
-            <div><img src="	https://ak-media.theory.com/i/theory/TH_L1118715_J00_L0/HIGH-NECK-PO?$TH-product-tile3x$
+            <div><img src="	https://ak-media.theory.com/i/theory/TH_L0197101_XHX_L0/CLINTON-DPK-W?$TH-Bestseller53x$
+
 
                 " alt="">
                  <div class="thirdBox2">
@@ -248,7 +268,7 @@
     <div class="price2">&#8377 20,500.00</div>
                  </div>
             </div>
-            <div><img src="	https://ak-media.theory.com/i/theory/TH_L0825305_001_L0/PULL-ON-SKT-A?$TH-product-tile3x$
+            <div><img src="https://ak-media.theory.com/i/theory/TH_A0674535_B7H_L0/SYLVAIN?$TH-Bestseller53x$
                 " alt="">
                 <div class="thirdBox2">
                     <div class="bulletBox2">
@@ -269,7 +289,7 @@
 <div class="firstSection">
     <div class="firstBox"></div>
     <div class="forthBox1">
-            <div><img src="https://ak-media.theory.com/i/theory/TH_L1102503_0NO_L0/COMBO-SH-CARDI?$TH-product-tile2x$
+            <div><img src="	https://ak-media.theory.com/i/theory/TH_J0194523_01V_L0/PRECISE-TEE?$TH-Bestseller52x$
 
                 " alt="">
                  <div class="fortdBox2">
@@ -284,11 +304,10 @@
     <div class="price2">&#8377 20,500.00</div>
                  </div>
             </div>
-            <div><img src="	https://ak-media.theory.com/i/theory/TH_I0001201_001_L0/DEMITRIA-4?$TH-Bestseller52x$" alt="">
+            <div><img src="	https://ak-media.theory.com/i/theory/TH_L1070416_F5J_L0/WYNWOOD?$TH-product-tile2x$" alt="">
                 <div class="fortdBox2">
                     <div class="bulletBox3">
                         <div class="bullets3">
-                            <div></div>
                             <div></div>
                             <div></div>
                             <div></div>
@@ -300,7 +319,7 @@
                 </div>
             </div>
 
-            <div><img src="https://ak-media.theory.com/i/theory/TH_L10AC001_001_L0/BUCKET-MICRO?$TH-product-tile2x$" alt="">
+            <div><img src="https://ak-media.theory.com/i/theory/TH_J0781713_0CT_L0?$TH-pdp-large-desktop$" alt="">
                 <div class="fortdBox2">
                     <div class="bulletBox3">
                         <div class="bullets3">
@@ -315,24 +334,34 @@
             </div>
     </div>
 </div>
-<div class="firstSection" style="width: 90%;" >
-<div class="viewMore" > <a href="#">
-    View More Now Trending </a></div>
+<div class="firstSection">
+<div class="viewMore"><a href="#"> View More Now Trending </a></div>
 </div>
-
-
-<div id="footer"></div>
+<%- include("footer.ejs") -%>
 </body>
 </html>
 
 
-<script type="module">
-	import navbar from '../components/navbar.js'
-	import footer from '../components/footer.js'
-	let nav = document.getElementById("navbar")
-	nav.innerHTML = navbar()
-
-	let foot = document.getElementById("footer")
-	foot.innerHTML = footer()
-</script>
 <script type="text/javascript" src="../scripts/header.js"></script>
+<script
+  type="text/javascript"
+  src="https://code.jquery.com/jquery-1.11.0.min.js"
+></script>
+<script
+  type="text/javascript"
+  src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
+></script>
+<script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+></script>
+<script>
+    $(document).ready(function () {
+        $(".slider").slick({
+        infinite: true,
+        speed:900,
+        prevArrow: '<button class="slide-arrow prev-arrow"></button>',
+        nextArrow: '<button class="slide-arrow next-arrow"></button>',
+        });
+    })
+</script>
