--- a/src/views/ejs/accesories.ejs
+++ b/src/views/ejs/accesories.ejs
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <%- include("navbar.ejs") -%>
+    <%- include("navbar.ejs",{bags}) -%>
     <div class="firstBox page--header">Accessories</div>
     <div class="firstSectionSlider">
         <div class="firstBox">
