--- a/src/views/ejs/signup.ejs
+++ b/src/views/ejs/signup.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../styles/asignup.css" />
   </head>
   <body>
-    <%- include("navbar.ejs") -%>
+    <%- include("navbar.ejs",{bags}) -%>
     <div id="ak-account">
       <a id="ak-h1" href="#" class="ak-account"><h1>ACCOUNT</h1></a>
     </div>
