--- a/src/views/ejs/womenpage.ejs
+++ b/src/views/ejs/womenpage.ejs
@@ -20,7 +20,7 @@
     
 </head>
 <body>
-    <%- include("navbar.ejs") -%>
+    <%- include("navbar.ejs",{bags}) -%>
     <div class="firstBox page--header">Women</div>
     <div class="firstSectionSlider">
         <div class="firstBox">
