--- a/src/public/styles/Slide.css
+++ b/src/public/styles/Slide.css
@@ -206,13 +206,18 @@
   }
 
   .slider-div > div {
-    left: 25%;
-    font-size: 12px;
+    font-size: 8px;
     color: #fff;
+  }
+
+  .slider-div > div h2 {
+    margin: 0;
+    font-size: 10px;
   }
   .slider-div > div a {
     color: #fff;
     border-color: #fff;
+    font-size: 5px;
   }
   .slider-div > div p {
     display: none;
@@ -232,5 +237,9 @@
 
   .slider-div img {
     height: 50vh;
+  }
+
+  .imgpants--child {
+    display: none;
   }
 }
