--- a/src/public/styles/productdetail.css
+++ b/src/public/styles/productdetail.css
@@ -14,7 +14,7 @@
   /* border: 4px solid red; */
   display: grid;
   grid-template-columns: 50% 48%;
-  height: 1500px;
+  /* height: 1500px; */
   justify-content: space-between;
   font-family: Theory-web-ul;
 }
@@ -33,7 +33,7 @@
 #smallbox1 > div > img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 #smallbox2 {
   padding: 40px 80px;
@@ -266,11 +266,15 @@
 #smallbox2box17box1 {
   flex-basis: 65px;
 }
+
+#smallbox2 {
+  padding: 40px;
+}
 #smallbox3 {
   margin-top: 100px;
   /*border: 2px solid lawngreen;*/
   width: 1360px;
-  height: 700px;
+  /* height: 700px; */
 }
 #smallbox3box1 {
   /* border: 1px solid saddlebrown; */
@@ -288,7 +292,7 @@
 #smallbox4 {
   /*border: 1px solid darkmagenta;*/
   /* width: 1360px; */
-  margin-top: 850px;
+  margin-top: 100px;
   margin-left: -710px;
   /*height: 600px;*/
 }
@@ -305,8 +309,26 @@
   grid-gap: 10px;
 }
 
+#rcmndData > div {
+  position: relative;
+}
+#recmndDataQuickAdd {
+  text-align: center;
+  position: absolute;
+  bottom: 35px;
+  left: 4%;
+  background-color: #fff;
+  width: 80%;
+  padding: 15px 20px;
+  display: none;
+}
+
 #rcmndData img {
   width: 100%;
+}
+#rcmndData > div:hover #recmndDataQuickAdd {
+  display: block;
+  cursor: pointer;
 }
 
 #rcmndData p {
