--- a/src/views/ejs/about.ejs
+++ b/src/views/ejs/about.ejs
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <%- include("navbar.ejs") -%>
+    <%- include("navbar.ejs",{bags}) -%>
     <div>
       <div class="about-bg">
         <div>
