--- a/src/views/ejs/manPagr.ejs
+++ b/src/views/ejs/manPagr.ejs
@@ -19,7 +19,7 @@
     />
 </head>
 <body>
-    <%- include("navbar.ejs") -%>
+    <%- include("navbar.ejs",{bags}) -%>
     <div class="firstBox page--header">Men</div>
     <div class="firstSectionSlider">
         <div class="firstBox">
