--- a/src/views/ejs/AddCart.ejs
+++ b/src/views/ejs/AddCart.ejs
@@ -119,7 +119,7 @@
           </div>
         </div>
 
-        <a href="checkout.html">
+        <a href="/checkout">
           <button id="checkoutbtn">CONTINUE TO CHECKOUT</button></a
         >
       </div>
